--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
+  "name": "sbt-typescript",
+  "license": "Apache-2.0",
   "scripts": {
     "build": "tsc -p .",
     "build:watch": "tsc -p . -w",
-    "clean": "rimraf src/main/resources"
+    "clean": "rimraf src/main/resources",
+    "lint": "./node_modules/tslint/bin/tslint --project ."
   },
   "dependencies": {
-    "fs-extra": "^9.0.0"
+    "fs-extra": "^9.0.1"
   },
   "devDependencies": {
-    "@types/fs-extra": "9.0.0",
+    "@types/fs-extra": "9.0.1",
     "@types/node": "^14.0.1",
-    "typescript": "3.9.2",
-    "rimraf": "^2.7.0"
+    "tslint": "^6.1.3",
+    "typescript": "4.0.3",
+    "rimraf": "^3.0.2"
   }
 }
