--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,15 @@ variables:
 test:
   image: baselinews/builder
   script:
+    # - sbt "scripted sbt-typescript/angular2"
+    - sbt "scripted sbt-typescript/atTypes"
+    - sbt "scripted sbt-typescript/es6-es5"
     - sbt "scripted sbt-typescript/ignoreCanNotFindModule"
     - sbt "scripted sbt-typescript/inlinesourcemap"
+    # - sbt "scripted sbt-typescript/outfile"
     - sbt "scripted sbt-typescript/sourcemap"
+    # - sbt "scripted sbt-typescript/stage"
+    # - sbt "scripted sbt-typescript/testassets"
   cache:
     key: ivy-deps
     paths:
