--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "devDependencies": {
     "@types/fs-extra": "9.0.1",
-    "@types/node": "^14.0.1",
+    "@types/node": "^14.14.9",
+    "rimraf": "^3.0.2",
     "tslint": "^6.1.3",
-    "typescript": "4.0.3",
-    "rimraf": "^3.0.2"
+    "typescript": "4.1.2"
   }
 }
